--- a/Algorithm/学习笔记.md
+++ b/Algorithm/学习笔记.md
@@ -11,8 +11,34 @@
 ### 2.1 插入排序
 
 ``` C
-void INSERTION_SORT(int *A){
-    
+void INSERTION_SORT1(int *A, int n){     // Non-decreasing
+    int i, j, key;
+    for(j = 1; j < n; j++){
+        key = A[j];
+        for(i = j - 1; i >= 0 && A[i] > key; i--){
+            A[i + 1] = A[i];
+        }
+        A[i + 1] = key;
+    }
+    return;
+}
+
+void INSERTION_SORT2(int *A, int n){        // Non-incremental
+    int i, j, key;
+    for(j = 1; j < n; j++){
+        key = A[j];
+        for(i = j - 1; i >= 0 && A[i] < key; i--){
+            A[i + 1] = A[i];
+        }
+        A[i + 1] = key;
+    }
+    return;
 }
 ```
+
+循环不变式及其三条性质：初始化、保持、终止
+- 初始化：循环第一次迭代前，它为真
+- 保持：如果循环的某次迭代前它为真，那么下次迭代之前它仍未真
+- 终止：在循环终止时，不变式为我们提供了一个有用的性质，该性质有助于证明算法是正确的
+
 
